fix: Total words found in translation and strings list views alignment fixed.

--- a/swete-admin/css/swete/global.css
+++ b/swete-admin/css/swete/global.css
@@ -61,3 +61,5 @@ body.loading {
 body.loading .modal {
     display: block;
 }
+
+#total-words-found {float:right;width: 200px; clear:right; text-align:right; margin-top:10px}
